overflow issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,6 @@
 ﻿.navbar-brand img{
 
-	height: 150px;
+	height: 100px;
 	/*width: auto;*/
 }
 body{
